# FindWaldo

./: pyproject.toml
tests/: test_findwaldo.py
