[tool.poetry]
name = "FindWaldo"
version = "0.1.0"
description = ""
authors = ["Douglas Chen <immortalgamerdc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
